2.1.0rc: conversion to mp3 (via gui) does not allow changing of the output file extension (from .raw)
the extension should probably be stored in the conversion profile (not hardcoded per encapsulation)
and it should be possible to change it in the destination file field
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Migration Bot added Severity::normal Type::bug Version::master git + 1 deleted label
added Severity::normal Type::bug Version::master git + 1 deleted label
- Migration Bot changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Rémi Denis-Courmont assigned to @jbk and unassigned @MigrationBot
assigned to @jbk and unassigned @MigrationBot
- Rémi Denis-Courmont added Component::Interface: Qt label and removed 1 deleted label
added Component::Interface: Qt label and removed 1 deleted label
- Jean-Baptiste Kempf assigned to @fcartegnie and unassigned @jbk
assigned to @fcartegnie and unassigned @jbk
- Developer
Extensions is enforced to mux format, which profile has been previously fixed
- François Cartegnie added Status::fixed label
added Status::fixed label
- François Cartegnie closed
closed
- Author
are you claiming it's fixed in rc1?
it's not, raw is forced when using the mp3 profile(perhaps modified) or new custom profile.
don't force the extension, raw is hardly ever what's needed
Original author: laxeraend
- Developer
Don't try rc1. Always try nightlies.
- Author
If you use a custom profile, it forces the raw extension for raw encapsulation. Why override the user choice of extension?
Original author: laxeraend
- Migration Bot removed Status::fixed label
removed Status::fixed label
- François Cartegnie reopened
reopened
- Jean-Baptiste Kempf changed milestone to %2.1.x maintenance bugs
changed milestone to %2.1.x maintenance bugs
- Developer
it's not a "raw" problem, it just doesn't load the custom profile when you create it. Profile is correctly saved, and selecting profile is also correct.
- Author
it's not a "raw" problem
I don't know what that means, the problem is very simple, the ui does not let you change the extension. So whatever default you pick, let the user change it.
Original author: laxeraend
- Developer
It does. Give your version & test case or I close this bug.
- Author
Replying to [comment:11 fcartegnie]:
It does.
does what?
Give your version & test case or I close this bug.
rc2 windows
convert an mp4 file via gui, create a new profile wih raw encapsulation, no video, mp3 audio
it forces .raw extension, if you change it in the edit box, it will change back when the conversion starts
Original author: laxeraend
- François Cartegnie closed
closed
- Developer
commit 82d7c41a Author: Francois Cartegnie fcvlcdev@free.fr Date: Thu Sep 12 23:59:34 2013 +0200
Qt: convert: don't enforce container extension (fix [#9282](https://code.videolan.org/videolan/vlc/-/issues/9282))
- François Cartegnie added Status::fixed label
added Status::fixed label
- Developer
Extensions in profiles is another problem and is more complex.
Vorbis + (0..n tracks)-> ogg, ogm, ogv, ...
Needs another ticket.
- Jean-Baptiste Kempf changed milestone to %2.1.0 release
changed milestone to %2.1.0 release
- Author
this is not fixed in 2.1.0
when converting with a custom profile, if you change the extension in the "destination file" edit box from .raw to .mp3, it reverts to .raw when the edit box loses focus
Original author: laxeraend
- Migration Bot removed Status::fixed label
removed Status::fixed label
- Jean-Baptiste Kempf reopened
reopened
- François Cartegnie added Status::fixed label
added Status::fixed label
- François Cartegnie closed
closed
- Jean-Baptiste Kempf changed milestone to %2.1.x maintenance bugs
changed milestone to %2.1.x maintenance bugs
- François Cartegnie mentioned in issue #10801 (closed)
mentioned in issue #10801 (closed)