Qt: convert: don't enforce container extension (fix #9282)